@@ -104,7 +104,7 @@ list(APPEND
   ${DCMTK_ROOT}/bin/Release
   ${VTK_ROOT}/bin/Release
   ${QtDCM_ROOT}/bin/Release
-  ${TTK_ROOT}/bin/Release
+  ${TTK_ROOT}/bin
   ${dtk_ROOT}/bin/Release
   ${RPI_ROOT}/bin/Release
   ${ZLIB_ROOT}/Release
@@ -121,12 +121,14 @@ file(GLOB_RECURSE itk_files LIST_DIRECTORIES true \"${ITK_ROOT}/bin/*.dll\")
 file(GLOB_RECURSE vtk_files LIST_DIRECTORIES true \"${VTK_ROOT}/bin/*.dll\")
 file(GLOB_RECURSE dtk_files LIST_DIRECTORIES true \"${dtk_ROOT}/bin/*.dll\")
 file(GLOB_RECURSE dcm_files LIST_DIRECTORIES true \"${QtDCM_ROOT}/bin/*.dll\")
+file(GLOB_RECURSE ttk_files LIST_DIRECTORIES true \"${TTK_DIR}/bin/*.dll\")
 file(GLOB_RECURSE qt5_files LIST_DIRECTORIES true \"${QT_BINARY_DIR}/*.dll\")
 file(GLOB_RECURSE zlib_files LIST_DIRECTORIES true \"${ZLIB_ROOT}/*.dll\")
 list(APPEND files \${itk_files})
 list(APPEND files \${vtk_files})
 list(APPEND files \${dtk_files})
 list(APPEND files \${dcm_files})
+list(APPEND files \${ttk_files})
 list(APPEND files \${qt5_files})
 list(APPEND files \${zlib_files})
 
